# aptos_swap_indexer

./: .env  Cargo.toml  README.md  config.yaml  diesel.toml
entry_point/: config.rs
src/: config.rs  main.rs
src/db/: diesel.toml
src/db/migrations/00000000000000_diesel_initial_setup/: event.sql
src/db/migrations/2025-06-27-082730_swap_transactions/: down.sql  up.sql
src/db/migrations/2026-04-15-023334-0000_hyperion_swap_events/: down.sql  up.sql
src/db/migrations/2026-04-15-033836-0000_processor_status/: down.sql  up.sql
src/db/postgres/: .env  mod.rs  schema.rs
src/db/src/: scheduler.rs
src/processors/: mod.rs
src/processors/hyperion_swap/: extractor.rs  mod.rs  model.rs  processor.rs  storer.rs
