[package]
name = "aptos_swap_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "bef75a40c768157df0e5b5d5c1ba1f86c0fe92e4", features = ["postgres_full"]}
# Error handling
anyhow = "1.0.86"
async-trait = "0.1.80"
# Config / CLI
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
diesel-async = { version = "0.4", features = ["postgres","bb8"]}
diesel = { version = "=2.2.0", features = [
    "chrono",
    "postgres_backend",
    "numeric",
    "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
field_count = "0.1.1"
rayon = "1.10.0"
## Serialization
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }

# Async 
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.34"

# Utilities
chrono = { version   = "0.4.44", features = ["serde"]}
bigdecimal = { version = "0.4", features = ["serde"]}
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4"