[package]
name = "hyperion-swap-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyperion-swap-processor"
path = "src/main.rs"

[dependencies]
# Aptos Indexer SDK
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "e1e1bdd9349f0a68c9fc53b7e2cebda9e2ce92b7" }
aptos-indexer-processor-sdk-server-framework = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "e1e1bdd9349f0a68c9fc53b7e2cebda9e2ce92b7" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database (Diesel + PostgreSQL)
diesel = { version = "2.1", features = ["postgres", "r2d2", "numeric", "serde_json"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"

# Config / CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
hex = "0.4"

serde_yaml = { version = "0.9.34+deprecated"}

[dev-dependencies]
tokio-test = "0.4"